--- a/app/globals.css
+++ b/app/globals.css
@@ -826,11 +826,10 @@ main {
 
 #categories .category-block {
 	margin: 0;
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(auto-fill, 40px);
 	gap: 15px;
-	justify-content: flex-start;
-	align-items: flex-start;
 	min-inline-size: 150px;
 	max-inline-size: 150px;
 	padding: 10px 10px;
@@ -842,6 +841,9 @@ main {
 #categories .category-block .category {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+	flex-wrap: nowrap;
+	text-wrap: nowrap;
 	background-color: black;
 	padding: 5px 10px;
 	color: var(--sec-color);
